--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ margin: 0 auto;
   line-height: 30px;  
 }
 
-.pricing_sec_top .plan-checker{
+.section_title .plan-checker{
   width:80px;
   height:40px;
   appearance:none;
@@ -274,11 +274,11 @@ margin: 0 auto;
   position: relative;
 }
 
-.pricing_sec_top input:checked[type="checkbox"]{
+.section_title input:checked[type="checkbox"]{
   background: #03a9f4;
 }
 
-.pricing_sec_top input[type="checkbox"]:before
+.section_title input[type="checkbox"]:before
 {
 content: '';
 position: absolute;
@@ -293,8 +293,24 @@ box-shadow: 0 2px 5px rgba(0, 0, 0, .2);
 transition:  .5s;
 }
 
-.pricing_sec_top input:checked[type="checkbox"]:before{
+.section_title input:checked[type="checkbox"]:before{
   left: 40px;
+}
+
+.pricing_sec .phone-contact
+{
+display: grid;
+text-align: center;
+font-size: 22px;
+cursor: pointer; 
+}
+
+.pricing_sec .phone-contact button{
+border: 1px solid rgb(203, 214, 226);
+border-radius: 200px;
+margin: 0px auto;
+text-align: center;
+padding: 15px 44px;
 }
 
 .prod_feature_block{width: 100%;}
@@ -2116,7 +2132,7 @@ width: 48%;}
 
 
 @media (max-width: 1365px) {
-.pricing_box{ padding-left: 45px; padding-right: 45px; }
+.pricing_box{ padding-left: 45px; padding-right: 45px; height: 340px;}
 .pricing_box_trial span{padding-left: 15px; padding-right: 15px; font-size: 20px;min-width: 320px;}
 .prod_feature_box h4{font-size: 20px; line-height: 22px;}
 .faq_secbox_last.faq_secbox figure{min-width: 160px;}
@@ -2717,7 +2733,7 @@ padding-left: 50px !important; background-position: 17px center;}
 .pricing_sec .resp-accordion.resp-tab-active .pricing_box h4{color: #fff;}
 .prod_feature_content::before{display: none;}
 .prod_feature_content::after{display: none;}
-.pricing_sec .jwg_slider_module, .pricing_sec .jwg_slider_module .arrow_navigation, .pricing_sec .jwg_slider_module .tabbed_navigation{overflow: visible;}
+/*.pricing_sec .jwg_slider_module, .pricing_sec .jwg_slider_module .arrow_navigation, .pricing_sec .jwg_slider_module .tabbed_navigation{overflow: visible;}*/
 
 
 
