--- a/style.css
+++ b/style.css
@@ -470,7 +470,7 @@ display: flex; justify-content: center;}
 .joinworkep p{ font-size: 22px;line-height: 36px;font-weight: 600; color: #617d8a; }
 
 .joinworkep_btns{width: 100%; text-align: center; padding-top: 40px;}
-.joinworkep_btns ul{padding: 0; list-style: none; margin: 0 auto; display:flex; align-items: baseline;}
+.joinworkep_btns ul{padding: 0; list-style: none; margin: 0 auto; display:flex; align-items: baseline;justify-content:center;}
 .joinworkep_btns ul li{ float: left; margin: 0 10px;}
 .signupgoogle,.g_suitbtn,.book-demo{display: inline-block; padding:8px 29px; background:#fff; -webkit-box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.15);-moz-box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.15);box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.15);-webkit-border-radius: 30px;
 -moz-border-radius: 30px; border-radius: 30px; min-height: 65px;-ms-flex-align: center;
