--- a/lp/lp-style.css
+++ b/lp/lp-style.css
@@ -329,6 +329,8 @@ margin: 0 auto;
   color: #517e8c;
   font-family: 'Nunito', sans-serif;
   -webkit-font-smoothing: antialiased;
+  margin: 0 auto;
+  max-width: 420px;
 }
 
 .containter-lp ul { padding-left:20px; list-style:none; }
@@ -352,6 +354,7 @@ font-family: 'Nunito', sans-serif;
   box-shadow: 0px 1px 10px 0px rgb(0 0 0 / 10%);
 }
 
+
 .book-demo span{text-align: left;}
 .signupgoogle{background: url(../images/google_ic.png) no-repeat 34px center #fff; background-size: 28px; padding-left: 84px !important;}
 .signupgoogle:hover{background-color: #273238; color: #fff;}
@@ -362,6 +365,8 @@ font-family: 'Nunito', sans-serif;
 
 
 form  button{
+width: 340px;
+margin-top: 25px;  
 background-color: #167ee6!important;
 color: #fff;
 height: 40px;
@@ -369,10 +374,22 @@ border: none;
 max-width: 340px;
 margin-top: 25px;
 border-radius: 30px;
+border-radius: 30px;
+padding-left: 30px;
+padding-right: 30px;
+font-size: 22px;
+cursor: pointer;
+cursor: pointer;
+line-height: 30px;
+outline: none !important;
+}
+
+form  button:hover
+{
+background: #1ca7f9 !important;
 }
 
 footer li{
 font-size: 14px!important;
 line-height: 21px;
-}
 }
