--- a/lp/lp-style.css
+++ b/lp/lp-style.css
@@ -212,7 +212,7 @@ display: -webkit-flex;display: flex; margin-left: 36px; margin-top: 20px; positi
 .joinworkep_btns{width: 100%; text-align: center; padding-top: 40px; display: grid;}
 .joinworkep_btns ul{padding: 0; list-style: none; margin: 0 auto; display:flex; align-items: baseline;}
 .joinworkep_btns ul li{ float: left; margin: 0 10px; line-height: 20px;}
-.signupgoogle,.g_suitbtn{display: inline-block; padding:8px 29px; background:#fff; -webkit-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.05);-moz-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.05);box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.05);-webkit-border-radius: 30px;
+.signupgoogle,.g_suitbtn, .book-demo{display: inline-block; padding:8px 29px; background:#fff; -webkit-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.05);-moz-box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.05);box-shadow: 0px 3px 7px 0px rgba(0,0,0,0.05);-webkit-border-radius: 30px;
 -moz-border-radius: 30px; border-radius: 30px; min-height: 65px;-ms-flex-align: center;
 -webkit-align-items: center;-webkit-box-align: center;align-items: center;
 display: -webkit-box;
@@ -302,6 +302,12 @@ background:#fff;-webkit-box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.05);
 -moz-box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.05);
 box-shadow: 0px -1px 5px 0px rgba(0,0,0,0.05); position: relative;z-index: 1;}
 
+.book-demo{background: url(../images/meet-icon.svg) no-repeat 34px center #ffffff; background-size: 30px; padding-left: 75px !important; color: #273238; box-shadow: 0px 3px 7px 0px rgb(0 0 0 / 5%);}
+.book-demo:hover{background-color: #273238;color: #fff;}
+.index_banner_content .book-demo{background-size: 24px;padding-left: 60px !important; cursor: pointer;padding: 8px 29px;}
+
+
+
 /*new landing Lead Magnet*/
 
 body .containter-lp{
@@ -354,13 +360,6 @@ font-family: 'Nunito', sans-serif;
   box-shadow: 0px 1px 10px 0px rgb(0 0 0 / 10%);
 }
 
-
-.book-demo span{text-align: left;}
-.signupgoogle{background: url(../images/google_ic.png) no-repeat 34px center #fff; background-size: 28px; padding-left: 84px !important;}
-.signupgoogle:hover{background-color: #273238; color: #fff;}
-.book-demo:hover{background-color: #273238; color: #fff;}
-.book-demo{background: url(../images/meet-icon.svg) no-repeat 34px center #ffffff; background-size: 30px; padding-left: 75px !important; color: #273238;}
-.book-demo{display: inline-block; padding:8px 29px; background:#fff; -webkit-box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.15);-moz-box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.15);box-shadow: 0px 1px 7px 0px rgba(0,0,0,0.15);-webkit-border-radius: 30px;}
 
 
 
